# Moss

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  \  callgrind.out.37953  callgrind.out.38217  callgrind.out.73948  cmake_install.cmake  main  old_main.txt  performance.txt  valgrind-out.txt
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
logs/: callgrind.out.8755  performance.txt  test_command.txt  v0.2_v0.3_results.txt  v0.5_v0.2_results.txt  v0.5_v0.3_results.txt  v0.5_v0.4_results.txt  v0.6_v0.5_results.txt
logs/main-moss-v0.3-quiscense-1726249296/: main-moss-v0.3-quiscense-results.txt  main-moss-v0.3-quiscense.pgn
logs/main-moss-v0.4-TT-1726249398/: main-moss-v0.4-TT-results.txt  main-moss-v0.4-TT.pgn
logs/main-moss-v0.5-bug_fixes-1726249434/: main-moss-v0.5-bug_fixes-results.txt  main-moss-v0.5-bug_fixes.pgn
logs/main-moss-v0.6-mvv_lva-1726334676/: main-moss-v0.6-mvv_lva-results.txt  main-moss-v0.6-mvv_lva.pgn
logs/main-moss-v1.0-1726346864/: main-moss-v1.0-results.txt  main-moss-v1.0.pgn
logs/moss-v.0.10-moss-v0.9-move_ordering-1726406173/: moss-v.0.10-moss-v0.9-move_ordering-results.txt  moss-v.0.10-moss-v0.9-move_ordering.pgn
logs/moss-v.0.10-moss-v0.9-move_ordering-1726406867/: moss-v.0.10-moss-v0.9-move_ordering-results.txt  moss-v.0.10-moss-v0.9-move_ordering.pgn
logs/moss-v.0.10-moss-v0.9-move_ordering-1726407039/: moss-v.0.10-moss-v0.9-move_ordering-results.txt  (+1 more)
old_engines/: moss-v0.1-ab-pruning  moss-v0.3-quiscense  moss-v0.4-TT  moss-v0.6-mvv_lva  test_command.txt  v0.1_v0.2_results.txt  v0.2_v0.3_results.txt
release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
scripts/: sprt.sh
src/: attack_tables.cpp  attack_tables.hpp  datatypes.hpp  eval.cpp  eval.hpp  main.cpp  move_generator.cpp  move_generator.hpp  move_list.cpp  move_list.hpp  position.cpp  position.hpp  search.cpp  search.hpp  uci.cpp  uci.hpp  utils.cpp  utils.hpp  zobrist.cpp  zobrist.hpp
(+22 files in other folders)
